// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accessibility Tests Accessibility data for Label and Level 1`] = `
{
  "Automation Tree": {
    "AutomationId": "accessibility-base-view-2",
    "ControlType": 50026,
    "Level": 2,
    "LocalizedControlType": "group",
    "Name": "A hint for the red box.",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "AccessibilityLabel": "A hint for the red box.",
      "TestId": "accessibility-base-view-2",
    },
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 0, 0, 255)",
    },
    "Comment": "accessibility-base-view-2",
    "Offset": "0, 0, 0",
    "Size": "50, 50",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Accessibility Tests Accessibility data for Label,Level and Hint 1`] = `
{
  "Automation Tree": {
    "AccessKey": "accessKey",
    "AnnotationPattern.Author": "Clint Westwood",
    "AnnotationPattern.DateTime": "3/19/2025 1:03 PM",
    "AnnotationPattern.TypeId": 60003,
    "AnnotationPattern.TypeName": "Check Comment",
    "AutomationId": "accessibility-base-view-1",
    "ControlType": 50026,
    "Description": "Sample Description",
    "HelpText": "A hint for the blue box.",
    "ItemType": "comment",
    "Level": 1,
    "LocalizedControlType": "group",
    "Name": "A blue box",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "AccessibilityLabel": "A blue box",
      "TestId": "accessibility-base-view-1",
    },
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(0, 0, 255, 255)",
    },
    "Comment": "accessibility-base-view-1",
    "Offset": "0, 0, 0",
    "Size": "50, 50",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Accessibility Tests Accessibility data for Role, Setsize etc. 1`] = `
{
  "Automation Tree": {
    "AutomationId": "accessibility-base-view-3",
    "ControlType": 50007,
    "Level": 9,
    "LocalizedControlType": "list item",
    "Name": "Aria label takes precedence",
    "PositionInSet": 2,
    "SizeofSet": 5,
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "AccessibilityLabel": "Aria label takes precedence",
      "TestId": "accessibility-base-view-3",
    },
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 0, 0, 255)",
    },
    "Comment": "accessibility-base-view-3",
    "Offset": "0, 0, 0",
    "Size": "50, 50",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Accessibility Tests Components can store range data by setting the min, max, and now of accessibilityValue 1`] = `
{
  "Automation Tree": {
    "AutomationId": "accessibilityValue-number",
    "ControlType": 50015,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "slider",
    "RangeValuePattern.IsReadOnly": true,
    "RangeValuePattern.Maximum": 125,
    "RangeValuePattern.Minimum": 5,
    "RangeValuePattern.Value": 10,
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "The View's (accessibilityRole == adjustable, ie. Slider) properties should be the following according to UIA: Min- 5Max- 125Now- 10",
        "TextRangePattern.GetText": "The View's (accessibilityRole == adjustable, ie. Slider) properties should be the following according to UIA: Min- 5Max- 125Now- 10",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "accessibilityValue-number",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(128, 128, 128, 255)",
    },
    "Comment": "accessibilityValue-number",
    "Offset": "0, 0, 0",
    "Size": "916, 50",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "916, 19",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "916, 19",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Accessibility Tests Components can store value data by setting the text of accessibilityValue 1`] = `
{
  "Automation Tree": {
    "AutomationId": "accessibilityValue-text",
    "ControlType": 50003,
    "LocalizedControlType": "combo box",
    "ValuePattern.IsReadOnly": true,
    "ValuePattern.Value": "testText",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "The View's properties should be the following according to UIA: Text- testText",
        "TextRangePattern.GetText": "The View's properties should be the following according to UIA: Text- testText",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "accessibilityValue-text",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(128, 128, 128, 255)",
    },
    "Comment": "accessibilityValue-text",
    "Offset": "0, 0, 0",
    "Size": "916, 50",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "916, 20",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "916, 20",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Accessibility Tests Elements can set accessibilityState:selected to false 1`] = `
{
  "Automation Tree": {
    "AutomationId": "Selectable item 1",
    "ControlType": 50000,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "Selectable item 1",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Unselected",
        "TextRangePattern.GetText": "Unselected",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "AccessibilityLabel": "Selectable item 1",
      "TestId": "Selectable item 1",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(135, 206, 250, 255)",
    },
    "Comment": "Selectable item 1",
    "Offset": "0, 0, 0",
    "Size": "100, 50",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "100, 20",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "100, 20",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Accessibility Tests Elements can set accessibilityState:selected to true 1`] = `
{
  "Automation Tree": {
    "AutomationId": "Selectable item 1",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "Selectable item 1",
    "SelectionItemPattern.IsSelected": true,
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Selected",
        "TextRangePattern.GetText": "Selected",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "AccessibilityLabel": "Selectable item 1",
      "TestId": "Selectable item 1",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(128, 128, 128, 255)",
    },
    "Comment": "Selectable item 1",
    "Offset": "0, 0, 0",
    "Size": "100, 50",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "100, 20",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "100, 20",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Accessibility Tests Selectable items must have a Selection Container. Elements can set accessibilityState:multiselectable and accessibilityState:required to true 1`] = `
{
  "Automation Tree": {
    "AutomationId": "selection-container",
    "ControlType": 50026,
    "LocalizedControlType": "group",
    "Name": "Selection Container",
    "SelectionPattern.CanSelectMultiple": true,
    "SelectionPattern.IsSelectionRequired": true,
    "__Children": [
      {
        "AutomationId": "Selectable item 1",
        "ControlType": 50000,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "button",
        "Name": "Selectable item 1",
        "__Children": [
          {
            "AutomationId": "",
            "ControlType": 50020,
            "LocalizedControlType": "text",
            "Name": "Unselected",
            "TextRangePattern.GetText": "Unselected",
          },
        ],
      },
      {
        "AutomationId": "Selectable item 2",
        "ControlType": 50000,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "button",
        "Name": "Selectable item 2",
        "__Children": [
          {
            "AutomationId": "",
            "ControlType": 50020,
            "LocalizedControlType": "text",
            "Name": "Unselected",
            "TextRangePattern.GetText": "Unselected",
          },
        ],
      },
      {
        "AutomationId": "Selectable item 3",
        "ControlType": 50000,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "button",
        "Name": "Selectable item 3",
        "__Children": [
          {
            "AutomationId": "",
            "ControlType": 50020,
            "LocalizedControlType": "text",
            "Name": "Unselected",
            "TextRangePattern.GetText": "Unselected",
          },
        ],
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "AccessibilityLabel": "Selection Container",
      "TestId": "selection-container",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ScrollViewComponentView",
        "_Props": {
          "AccessibilityLabel": "List of selectable items",
        },
        "__Children": [
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
            "__Children": [
              {
                "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
                "_Props": {
                  "AccessibilityLabel": "Selectable item 1",
                  "TestId": "Selectable item 1",
                },
                "__Children": [
                  {
                    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
                    "_Props": {},
                  },
                ],
              },
              {
                "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
                "_Props": {
                  "AccessibilityLabel": "Selectable item 2",
                  "TestId": "Selectable item 2",
                },
                "__Children": [
                  {
                    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
                    "_Props": {},
                  },
                ],
              },
              {
                "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
                "_Props": {
                  "AccessibilityLabel": "Selectable item 3",
                  "TestId": "Selectable item 3",
                },
                "__Children": [
                  {
                    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
                    "_Props": {},
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  "Visual Tree": {
    "Comment": "selection-container",
    "Offset": "0, 0, 0",
    "Size": "916, 150",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "916, 150",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "916, 150",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": "0, 0, 0",
                "Size": "916, 150",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Brush": {
                      "Brush Type": "ColorBrush",
                      "Color": "rgba(0, 0, 0, 0)",
                    },
                    "Offset": "0, 0, 0",
                    "Size": "916, 150",
                    "Visual Type": "SpriteVisual",
                    "__Children": [
                      {
                        "Offset": "0, 0, 0",
                        "Size": "916, 150",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "916, 150",
                            "Visual Type": "SpriteVisual",
                            "__Children": [
                              {
                                "Offset": "0, 0, 0",
                                "Size": "100, 50",
                                "Visual Type": "SpriteVisual",
                                "__Children": [
                                  {
                                    "Brush": {
                                      "Brush Type": "ColorBrush",
                                      "Color": "rgba(135, 206, 250, 255)",
                                    },
                                    "Comment": "Selectable item 1",
                                    "Offset": "0, 0, 0",
                                    "Size": "100, 50",
                                    "Visual Type": "SpriteVisual",
                                    "__Children": [
                                      {
                                        "Offset": "0, 0, 0",
                                        "Size": "100, 20",
                                        "Visual Type": "SpriteVisual",
                                        "__Children": [
                                          {
                                            "Offset": "0, 0, 0",
                                            "Size": "100, 20",
                                            "Visual Type": "SpriteVisual",
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                ],
                              },
                              {
                                "Offset": "0, 50, 0",
                                "Size": "100, 50",
                                "Visual Type": "SpriteVisual",
                                "__Children": [
                                  {
                                    "Brush": {
                                      "Brush Type": "ColorBrush",
                                      "Color": "rgba(135, 206, 250, 255)",
                                    },
                                    "Comment": "Selectable item 2",
                                    "Offset": "0, 0, 0",
                                    "Size": "100, 50",
                                    "Visual Type": "SpriteVisual",
                                    "__Children": [
                                      {
                                        "Offset": "0, 0, 0",
                                        "Size": "100, 20",
                                        "Visual Type": "SpriteVisual",
                                        "__Children": [
                                          {
                                            "Offset": "0, 0, 0",
                                            "Size": "100, 20",
                                            "Visual Type": "SpriteVisual",
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                ],
                              },
                              {
                                "Offset": "0, 100, 0",
                                "Size": "100, 50",
                                "Visual Type": "SpriteVisual",
                                "__Children": [
                                  {
                                    "Brush": {
                                      "Brush Type": "ColorBrush",
                                      "Color": "rgba(135, 206, 250, 255)",
                                    },
                                    "Comment": "Selectable item 3",
                                    "Offset": "0, 0, 0",
                                    "Size": "100, 50",
                                    "Visual Type": "SpriteVisual",
                                    "__Children": [
                                      {
                                        "Offset": "0, 0, 0",
                                        "Size": "100, 20",
                                        "Visual Type": "SpriteVisual",
                                        "__Children": [
                                          {
                                            "Offset": "0, 0, 0",
                                            "Size": "100, 20",
                                            "Visual Type": "SpriteVisual",
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                ],
                              },
                            ],
                          },
                        ],
                      },
                    ],
                  },
                ],
              },
              {
                "Offset": "-13, 0, 0",
                "Size": "12, 0",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Offset": "-12, 3, 0",
                    "Opacity": 0,
                    "Size": "12, 144",
                    "Visual Type": "Visual",
                  },
                  {
                    "Offset": "0, 4, 0",
                    "Opacity": 0,
                    "Size": "12, 12",
                    "Visual Type": "SpriteVisual",
                  },
                  {
                    "Offset": "0, -16, 0",
                    "Opacity": 0,
                    "Size": "12, 12",
                    "Visual Type": "SpriteVisual",
                  },
                  {
                    "Offset": "-5, 16, 0",
                    "Size": "6, 118",
                    "Visual Type": "Visual",
                  },
                ],
              },
              {
                "Offset": "0, -13, 0",
                "Size": "0, 12",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Offset": "3, -12, 0",
                    "Opacity": 0,
                    "Size": "910, 12",
                    "Visual Type": "Visual",
                  },
                  {
                    "Offset": "4, 0, 0",
                    "Opacity": 0,
                    "Size": "12, 12",
                    "Visual Type": "SpriteVisual",
                  },
                  {
                    "Offset": "-16, 0, 0",
                    "Opacity": 0,
                    "Size": "12, 12",
                    "Visual Type": "SpriteVisual",
                  },
                  {
                    "Offset": "16, -5, 0",
                    "Size": "884, 6",
                    "Visual Type": "Visual",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;
